--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,14 @@
 #
 #    pip-compile
 #
+appdirs==1.4.4
+    # via requests-cache
+attrs==21.2.0
+    # via
+    #   cattrs
+    #   requests-cache
+cattrs==1.8.0
+    # via requests-cache
 certifi==2021.5.30
     # via requests
 chardet==4.0.0
@@ -19,8 +27,17 @@ python-gitlab==2.10.1
 requests==2.26.0
     # via
     #   python-gitlab
+    #   requests-cache
     #   requests-toolbelt
+requests-cache==0.8.1
+    # via -r requirements.in
 requests-toolbelt==0.9.1
     # via python-gitlab
+six==1.16.0
+    # via url-normalize
+url-normalize==1.4.3
+    # via requests-cache
 urllib3==1.26.6
-    # via requests
+    # via
+    #   requests
+    #   requests-cache
