--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ attrs==21.2.0
     # via
     #   cattrs
     #   requests-cache
-cattrs==1.8.0
+cattrs==22.2.0
     # via requests-cache
 certifi==2021.5.30
     # via requests
@@ -18,6 +18,8 @@ chardet==4.0.0
     # via python-debian
 charset-normalizer==2.0.6
     # via requests
+exceptiongroup==1.0.4
+    # via cattrs
 idna==3.2
     # via requests
 python-debian==0.1.42
@@ -30,7 +32,7 @@ requests==2.26.0
     #   python-gitlab
     #   requests-cache
     #   requests-toolbelt
-requests-cache==0.8.1
+requests-cache==0.9.7
     # via -r requirements.in
 requests-toolbelt==0.9.1
     # via python-gitlab
